Dynamic Forms - Fixes for still supporting top level controls. Refactors for readability

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,4 +15,5 @@ form {
 
 .formgroup {
     padding-left: 10px;
+    border-left: 1px dashed green;
 }
